activite/histoire/outil/labo/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> exp
Rule 2     exp -> ADD modify
Rule 3     exp -> DELETE fact2
Rule 4     exp -> DELETE RULES numlist
Rule 5     numlist -> NUM numlist
Rule 6     numlist -> <empty>
Rule 7     exp -> CHECK logalg
Rule 8     exp -> DISPLAY logalg
Rule 9     exp -> CHECK RULES
Rule 10    modify -> fact
Rule 11    modify -> rule
Rule 12    fact -> ENT ENT ENT
Rule 13    rule -> IF logalg2 THEN conj2
Rule 14    logalg2 -> fact3 more2
Rule 15    logalg -> fact2 more
Rule 16    more -> op fact2 more
Rule 17    more2 -> op2 fact3 more2
Rule 18    more -> <empty>
Rule 19    more2 -> <empty>
Rule 20    op -> AND
Rule 21    op -> OR
Rule 22    op2 -> AND
Rule 23    op2 -> OR
Rule 24    conj2 -> fact3 moreconj2
Rule 25    moreconj2 -> AND fact3 moreconj2
Rule 26    moreconj2 -> <empty>
Rule 27    fact2 -> el el el
Rule 28    fact3 -> el el el
Rule 29    el -> ENT
Rule 30    el -> VAR

Terminals, with rules where they appear

ADD                  : 2
AND                  : 20 22 25
CHECK                : 7 9
DELETE               : 3 4
DISPLAY              : 8
ENT                  : 12 12 12 29
IF                   : 13
NUM                  : 5
OR                   : 21 23
RULES                : 4 9
THEN                 : 13
VAR                  : 30
error                : 

Nonterminals, with rules where they appear

calc                 : 0
conj2                : 13
el                   : 27 27 27 28 28 28
exp                  : 1
fact                 : 10
fact2                : 3 15 16
fact3                : 14 17 24 25
logalg               : 7 8
logalg2              : 13
modify               : 2
more                 : 15 16
more2                : 14 17
moreconj2            : 24 25
numlist              : 4 5
op                   : 16
op2                  : 17
rule                 : 11

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . exp
    (2) exp -> . ADD modify
    (3) exp -> . DELETE fact2
    (4) exp -> . DELETE RULES numlist
    (7) exp -> . CHECK logalg
    (8) exp -> . DISPLAY logalg
    (9) exp -> . CHECK RULES

    ADD             shift and go to state 3
    DELETE          shift and go to state 4
    CHECK           shift and go to state 5
    DISPLAY         shift and go to state 6

    calc                           shift and go to state 1
    exp                            shift and go to state 2

state 1

    (0) S' -> calc .



state 2

    (1) calc -> exp .

    $end            reduce using rule 1 (calc -> exp .)


state 3

    (2) exp -> ADD . modify
    (10) modify -> . fact
    (11) modify -> . rule
    (12) fact -> . ENT ENT ENT
    (13) rule -> . IF logalg2 THEN conj2

    ENT             shift and go to state 10
    IF              shift and go to state 11

    modify                         shift and go to state 7
    fact                           shift and go to state 8
    rule                           shift and go to state 9

state 4

    (3) exp -> DELETE . fact2
    (4) exp -> DELETE . RULES numlist
    (27) fact2 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    RULES           shift and go to state 13
    ENT             shift and go to state 15
    VAR             shift and go to state 16

    fact2                          shift and go to state 12
    el                             shift and go to state 14

state 5

    (7) exp -> CHECK . logalg
    (9) exp -> CHECK . RULES
    (15) logalg -> . fact2 more
    (27) fact2 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    RULES           shift and go to state 18
    ENT             shift and go to state 15
    VAR             shift and go to state 16

    logalg                         shift and go to state 17
    fact2                          shift and go to state 19
    el                             shift and go to state 14

state 6

    (8) exp -> DISPLAY . logalg
    (15) logalg -> . fact2 more
    (27) fact2 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    logalg                         shift and go to state 20
    fact2                          shift and go to state 19
    el                             shift and go to state 14

state 7

    (2) exp -> ADD modify .

    $end            reduce using rule 2 (exp -> ADD modify .)


state 8

    (10) modify -> fact .

    $end            reduce using rule 10 (modify -> fact .)


state 9

    (11) modify -> rule .

    $end            reduce using rule 11 (modify -> rule .)


state 10

    (12) fact -> ENT . ENT ENT

    ENT             shift and go to state 21


state 11

    (13) rule -> IF . logalg2 THEN conj2
    (14) logalg2 -> . fact3 more2
    (28) fact3 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    logalg2                        shift and go to state 22
    fact3                          shift and go to state 23
    el                             shift and go to state 24

state 12

    (3) exp -> DELETE fact2 .

    $end            reduce using rule 3 (exp -> DELETE fact2 .)


state 13

    (4) exp -> DELETE RULES . numlist
    (5) numlist -> . NUM numlist
    (6) numlist -> .

    NUM             shift and go to state 26
    $end            reduce using rule 6 (numlist -> .)

    numlist                        shift and go to state 25

state 14

    (27) fact2 -> el . el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    el                             shift and go to state 27

state 15

    (29) el -> ENT .

    ENT             reduce using rule 29 (el -> ENT .)
    VAR             reduce using rule 29 (el -> ENT .)
    $end            reduce using rule 29 (el -> ENT .)
    AND             reduce using rule 29 (el -> ENT .)
    OR              reduce using rule 29 (el -> ENT .)
    THEN            reduce using rule 29 (el -> ENT .)


state 16

    (30) el -> VAR .

    ENT             reduce using rule 30 (el -> VAR .)
    VAR             reduce using rule 30 (el -> VAR .)
    $end            reduce using rule 30 (el -> VAR .)
    AND             reduce using rule 30 (el -> VAR .)
    OR              reduce using rule 30 (el -> VAR .)
    THEN            reduce using rule 30 (el -> VAR .)


state 17

    (7) exp -> CHECK logalg .

    $end            reduce using rule 7 (exp -> CHECK logalg .)


state 18

    (9) exp -> CHECK RULES .

    $end            reduce using rule 9 (exp -> CHECK RULES .)


state 19

    (15) logalg -> fact2 . more
    (16) more -> . op fact2 more
    (18) more -> .
    (20) op -> . AND
    (21) op -> . OR

    $end            reduce using rule 18 (more -> .)
    AND             shift and go to state 30
    OR              shift and go to state 31

    more                           shift and go to state 28
    op                             shift and go to state 29

state 20

    (8) exp -> DISPLAY logalg .

    $end            reduce using rule 8 (exp -> DISPLAY logalg .)


state 21

    (12) fact -> ENT ENT . ENT

    ENT             shift and go to state 32


state 22

    (13) rule -> IF logalg2 . THEN conj2

    THEN            shift and go to state 33


state 23

    (14) logalg2 -> fact3 . more2
    (17) more2 -> . op2 fact3 more2
    (19) more2 -> .
    (22) op2 -> . AND
    (23) op2 -> . OR

    THEN            reduce using rule 19 (more2 -> .)
    AND             shift and go to state 36
    OR              shift and go to state 37

    more2                          shift and go to state 34
    op2                            shift and go to state 35

state 24

    (28) fact3 -> el . el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    el                             shift and go to state 38

state 25

    (4) exp -> DELETE RULES numlist .

    $end            reduce using rule 4 (exp -> DELETE RULES numlist .)


state 26

    (5) numlist -> NUM . numlist
    (5) numlist -> . NUM numlist
    (6) numlist -> .

    NUM             shift and go to state 26
    $end            reduce using rule 6 (numlist -> .)

    numlist                        shift and go to state 39

state 27

    (27) fact2 -> el el . el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    el                             shift and go to state 40

state 28

    (15) logalg -> fact2 more .

    $end            reduce using rule 15 (logalg -> fact2 more .)


state 29

    (16) more -> op . fact2 more
    (27) fact2 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    fact2                          shift and go to state 41
    el                             shift and go to state 14

state 30

    (20) op -> AND .

    ENT             reduce using rule 20 (op -> AND .)
    VAR             reduce using rule 20 (op -> AND .)


state 31

    (21) op -> OR .

    ENT             reduce using rule 21 (op -> OR .)
    VAR             reduce using rule 21 (op -> OR .)


state 32

    (12) fact -> ENT ENT ENT .

    $end            reduce using rule 12 (fact -> ENT ENT ENT .)


state 33

    (13) rule -> IF logalg2 THEN . conj2
    (24) conj2 -> . fact3 moreconj2
    (28) fact3 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    conj2                          shift and go to state 42
    fact3                          shift and go to state 43
    el                             shift and go to state 24

state 34

    (14) logalg2 -> fact3 more2 .

    THEN            reduce using rule 14 (logalg2 -> fact3 more2 .)


state 35

    (17) more2 -> op2 . fact3 more2
    (28) fact3 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    fact3                          shift and go to state 44
    el                             shift and go to state 24

state 36

    (22) op2 -> AND .

    ENT             reduce using rule 22 (op2 -> AND .)
    VAR             reduce using rule 22 (op2 -> AND .)


state 37

    (23) op2 -> OR .

    ENT             reduce using rule 23 (op2 -> OR .)
    VAR             reduce using rule 23 (op2 -> OR .)


state 38

    (28) fact3 -> el el . el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    el                             shift and go to state 45

state 39

    (5) numlist -> NUM numlist .

    $end            reduce using rule 5 (numlist -> NUM numlist .)


state 40

    (27) fact2 -> el el el .

    $end            reduce using rule 27 (fact2 -> el el el .)
    AND             reduce using rule 27 (fact2 -> el el el .)
    OR              reduce using rule 27 (fact2 -> el el el .)


state 41

    (16) more -> op fact2 . more
    (16) more -> . op fact2 more
    (18) more -> .
    (20) op -> . AND
    (21) op -> . OR

    $end            reduce using rule 18 (more -> .)
    AND             shift and go to state 30
    OR              shift and go to state 31

    op                             shift and go to state 29
    more                           shift and go to state 46

state 42

    (13) rule -> IF logalg2 THEN conj2 .

    $end            reduce using rule 13 (rule -> IF logalg2 THEN conj2 .)


state 43

    (24) conj2 -> fact3 . moreconj2
    (25) moreconj2 -> . AND fact3 moreconj2
    (26) moreconj2 -> .

    AND             shift and go to state 48
    $end            reduce using rule 26 (moreconj2 -> .)

    moreconj2                      shift and go to state 47

state 44

    (17) more2 -> op2 fact3 . more2
    (17) more2 -> . op2 fact3 more2
    (19) more2 -> .
    (22) op2 -> . AND
    (23) op2 -> . OR

    THEN            reduce using rule 19 (more2 -> .)
    AND             shift and go to state 36
    OR              shift and go to state 37

    op2                            shift and go to state 35
    more2                          shift and go to state 49

state 45

    (28) fact3 -> el el el .

    AND             reduce using rule 28 (fact3 -> el el el .)
    OR              reduce using rule 28 (fact3 -> el el el .)
    THEN            reduce using rule 28 (fact3 -> el el el .)
    $end            reduce using rule 28 (fact3 -> el el el .)


state 46

    (16) more -> op fact2 more .

    $end            reduce using rule 16 (more -> op fact2 more .)


state 47

    (24) conj2 -> fact3 moreconj2 .

    $end            reduce using rule 24 (conj2 -> fact3 moreconj2 .)


state 48

    (25) moreconj2 -> AND . fact3 moreconj2
    (28) fact3 -> . el el el
    (29) el -> . ENT
    (30) el -> . VAR

    ENT             shift and go to state 15
    VAR             shift and go to state 16

    fact3                          shift and go to state 50
    el                             shift and go to state 24

state 49

    (17) more2 -> op2 fact3 more2 .

    THEN            reduce using rule 17 (more2 -> op2 fact3 more2 .)


state 50

    (25) moreconj2 -> AND fact3 . moreconj2
    (25) moreconj2 -> . AND fact3 moreconj2
    (26) moreconj2 -> .

    AND             shift and go to state 48
    $end            reduce using rule 26 (moreconj2 -> .)

    moreconj2                      shift and go to state 51

state 51

    (25) moreconj2 -> AND fact3 moreconj2 .

    $end            reduce using rule 25 (moreconj2 -> AND fact3 moreconj2 .)

